<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layoutDescription="@xml/activity_about_scene"
    tools:context=".ui.AboutActivity">

    <ImageView
        android:id="@+id/imageViewMenuAbout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/menu_margin"
        android:elevation="@dimen/menu_elevation"
        android:src="@drawable/ic_menu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.github.florent37.shapeofview.shapes.ArcView
        android:id="@+id/headerAbout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/header_height"
        android:elevation="@dimen/header_elevation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shape_arc_height="@dimen/header_arc_height"
        app:shape_arc_position="bottom">

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/radial" />

        <ImageView
            android:id="@+id/imageViewDoctorAbout"
            android:layout_width="@dimen/image_doctor_about_width"
            android:layout_height="@dimen/image_doctor_about_height"
            android:layout_marginTop="@dimen/image_doctor_about_margin_top"
            android:src="@drawable/image_doctor_about"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </com.github.florent37.shapeofview.shapes.ArcView>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textViewHeaderTextAbout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/header_text_margin_top"
        android:layout_marginEnd="@dimen/header_text_margin_end"
        android:elevation="@dimen/header_text_elevation"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/know_about_covid"
        android:textColor="@color/header_text"
        android:textSize="@dimen/header_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imageViewVirusAbout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/image_virus_height"
        android:elevation="@dimen/image_virus_elevation"
        android:scaleX="1.1"
        android:scaleY="1.1"
        android:src="@drawable/image_virus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintMotionAbout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/headerAbout">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewHeadache"
            android:layout_width="@dimen/card_symptomp_width"
            android:layout_height="@dimen/card_symptomp_height"
            android:layout_marginStart="@dimen/card_symptomp_headache_margin_start"
            android:layout_marginTop="@dimen/card_symptomp_margin_top"
            android:layout_marginEnd="@dimen/card_symptomp_headache_margin_end"
            app:cardCornerRadius="@dimen/card_symptomp_corner_radius"
            app:layout_constraintEnd_toStartOf="@+id/cardViewCough"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingTop="8dp">

                <ImageView
                    android:layout_width="@dimen/image_symptomp_width"
                    android:layout_height="@dimen/image_symptomp_height"
                    android:layout_gravity="center"
                    android:src="@drawable/image_headache" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/poppins_bold"
                    android:text="@string/headache"
                    android:textColor="@color/symptomp_text"
                    android:textSize="@dimen/text_symptomp" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewCough"
            android:layout_width="@dimen/card_symptomp_width"
            android:layout_height="@dimen/card_symptomp_height"
            app:cardCornerRadius="@dimen/card_symptomp_corner_radius"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/cardViewHeadache">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingTop="8dp">

                <ImageView
                    android:layout_width="@dimen/image_symptomp_width"
                    android:layout_height="@dimen/image_symptomp_height"
                    android:layout_gravity="center"
                    android:src="@drawable/image_caugh" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/poppins_bold"
                    android:text="@string/cough"
                    android:textColor="@color/symptomp_text"
                    android:textSize="@dimen/text_symptomp" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewFever"
            android:layout_width="@dimen/card_symptomp_width"
            android:layout_height="@dimen/card_symptomp_height"
            android:layout_marginStart="@dimen/card_symptomp_fever_margin_start"
            android:layout_marginEnd="@dimen/card_symptomp_fever_margin_end"
            app:cardCornerRadius="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/cardViewCough"
            app:layout_constraintTop_toTopOf="@id/cardViewHeadache">

            <LinearLayout
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:orientation="vertical"
                android:paddingTop="8dp">

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:src="@drawable/image_fever" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/poppins_bold"
                    android:text="@string/fever"
                    android:textColor="@color/symptomp_text"
                    android:textSize="@dimen/text_symptomp" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/textViewSymptompsTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/title_symptomps"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/symptomps"
            android:textColor="@color/black"
            android:textSize="@dimen/title_size"
            app:layout_constraintBottom_toTopOf="@+id/cardViewHeadache"
            app:layout_constraintStart_toStartOf="@+id/cardViewHeadache" />

        <TextView
            android:id="@+id/textViewPreventionTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/title_preventions"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/prevention"
            android:textColor="@color/black"
            android:textSize="@dimen/title_size"
            app:layout_constraintBottom_toTopOf="@+id/recyclerPreventions"
            app:layout_constraintStart_toStartOf="@+id/cardViewHeadache" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerPreventions"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/recycler_preventions_margin_top"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cardViewHeadache"
            tools:listitem="@layout/prevention_item" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.motion.widget.MotionLayout>